--- a/src/config.json
+++ b/src/config.json
@@ -1,13 +1,10 @@
 {
     "wifi": {
-        "SSID": "SSID",
-        "password": "***********",
+        "SSID": "wifi SSID",
+        "password": "wifi pwd",
         "attempts": 3,
         "delay_in_msec": 200
     },
-    "secrity": {
-        "on": false
-    },
-    "server": "ws://192.168.1.100:80/",
+    "server": "ws://<your server ip>:8000/",
     "socket_delay_ms": 5
 }
