--- a/src/config.json
+++ b/src/config.json
@@ -1,10 +1,10 @@
 {
     "wifi": {
-        "SSID": "Vovaman",
-        "password": "(*Byakovo73*)",
+        "SSID": "ssid",
+        "password": "password",
         "attempts": 3,
         "delay_in_msec": 200
     },
-    "server": "ws://192.168.1.75:8000/",
+    "server": "ws://<server>:8000/",
     "socket_delay_ms": 5
 }
