--- a/src/config.json
+++ b/src/config.json
@@ -1,10 +1,15 @@
 {
     "wifi": {
-        "SSID": "ssid",
-        "password": "password",
+        "SSID": "Vovaman",
+        "password": "(*Byakovo73*)",
         "attempts": 3,
         "delay_in_msec": 200
     },
-    "server": "ws://<server>:8000/",
+    "server": "wss://192.168.1.76:8443/",
+    "ssl": {
+        "cert": "client1.crt",
+        "key": "client1.key",
+        "ca": "ca.der"
+    },
     "socket_delay_ms": 5
 }
